--- a/index.html
+++ b/index.html
@@ -58,15 +58,19 @@
             <button id="give-up" @click="giveUp">GIVE UP</button>
         </div>
     </section>
-    <section class="row log" v-if="gameIsRunning">
+    <template v-if="gameIsRunning">
+    <section class="row log" v-if="turns.length > 0">
         <div class="small-12 columns">
             <ul>
-                <li>
-
+                <li 
+                    v-for="turn in turns"
+                    :class="{'player-turn': turn.isPlayer, 'monster-turn': !turn.isPlayer}">
+                    {{turn.text }}
                 </li>
             </ul>
         </div>
     </section>
+    </template>
 </div>
 
 
