--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en_US">
 <head>
-    <title>Monster Slayer</title>
+    <title>Monster Battle Game</title>
+    <meta name="description" content="Simple HTML Game made with Vue.JS">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://npmcdn.com/vue/dist/vue.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+    <link rel="stylesheet" href="css/rpg-awesome.min.css">
     <link rel="stylesheet" href="css/app.css">
 
 </head>
 <body>
+<div class="row title">
+    <h1 class="text-center">Monster Battle Game</h1>
+</div>
 <div id="app">
     <section id="graphics" class="row" v-if="gameIsRunning">
         <img id="fog" class="vfx" src="./assets/fog.png" alt="">
@@ -25,7 +31,7 @@
                     class="healthbar text-center" 
                     style="background-color: green; margin: 0; color: white;"
                     :style="{width: playerHealth + '%'}">
-                    {{ playerHealth }}
+                    <i class="ra ra-hearts"></i> {{ playerHealth }}
                 </div>
             </div>
         </div>
@@ -40,22 +46,22 @@
                     class="healthbar text-center" 
                     style="background-color: green; margin: 0; color: white;"
                     :style="{width: monsterHealth + '%'}">
-                    {{ monsterHealth }}
+                    <i class="ra ra-hearts"></i> {{ monsterHealth }}
                 </div>
             </div>
         </div>
     </section>
     <section class="row controls" v-if="!gameIsRunning">
         <div class="small-12 columns">
-            <button id="start-game" @click="startGame">START NEW GAME</button>
+            <button id="start-game" @click="startGame"><i class="ra ra-gamepad-cross"></i> START NEW GAME</button>
         </div>
     </section>
     <section class="row controls" v-else>
         <div class="small-12 columns">
-            <button id="attack" @click="attack">ATTACK</button>
-            <button id="special-attack" @click="specialAttack">SPECIAL ATTACK</button>
-            <button id="heal" @click="heal">HEAL</button>
-            <button id="give-up" @click="giveUp">GIVE UP</button>
+            <button id="attack" @click="attack"><i class="ra ra-sword"></i> ATTACK</button>
+            <button id="special-attack" @click="specialAttack"><i class="ra ra-aura"></i> SPECIAL ATTACK</button>
+            <button id="heal" @click="heal"><i class="ra ra-health-increase"></i> HEAL</button>
+            <button id="give-up" @click="giveUp"><i class="ra ra-player-despair"></i> GIVE UP</button>
         </div>
     </section>
     <template v-if="gameIsRunning">
@@ -65,7 +71,7 @@
                 <li 
                     v-for="turn in turns"
                     :class="{'player-turn': turn.isPlayer, 'monster-turn': !turn.isPlayer}">
-                    {{turn.text }}
+                    <i class="ra ra-perspective-dice-three"></i> {{turn.text }}
                 </li>
             </ul>
         </div>
